[package]
name = "mohsin-blockchain"
version = "0.1.0"
edition = "2021"
authors = ["Mohsin <mohsin@0xmohsin.dev>"]
description = "MOHSIN VIRTUAL MACHINE - A blockchain with MVM-20 token standard"

[[bin]]
name = "mvm"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web server + WebSocket
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Cryptography
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
rand = "0.8"
hex = "0.4"
bech32 = "0.11"

# Database
rocksdb = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
thiserror = "1.0"
futures = "0.3"
tokio-tungstenite = "0.21"
